Fixed my 3rd Calculator name to Gregory-Leibniz Pi Approximation, and also aligned my title to the school monitor

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     top: 0;
     translate: 100px, 100px;
+    text-align: center;
 }
 
 .calculators {
